some last changes

--- a/OpenHash/Makefile
+++ b/OpenHash/Makefile
@@ -13,7 +13,7 @@ BINDIR = ./bin
 CC = g++
 CFLAGS = -O0 -Wall -Wextra -ansi -pedantic -g -ggdb -std=c++11 -lm -I. -I$(INCDIR)
 RM = rm
-OBJS = $(addprefix $(OBJDIR)/,openhash.o)
+OBJS = $(addprefix $(OBJDIR)/,hashtable.o)
 # Here on the OBJS I look for the files specified inside the (addprefix) and
 # after the comma and add the $(OBJDIR) is added to the beginning of each of the
 # files. More info on (https://www.gnu.org/software/make/manual/html_node/File-Name-Functions.html).
@@ -21,7 +21,7 @@ OBJS = $(addprefix $(OBJDIR)/,openhash.o)
 # Phony targets (for more information, visit https://www.gnu.org/software/make/manual/make.html#Phony-Targets)
 .PHONY: clean cleanobj cleanbin
 .PHONY: all main build
-.PHONY: openhash
+.PHONY: hashtable
 
 # Use "make" to execute everything
 all: main
@@ -30,7 +30,7 @@ all: main
 main: $(BINDIR)/programa
 
 # Compiles the main
-$(BINDIR)/programa: $(SRCDIR)/main.cpp $(INCDIR)/openhash.hpp
+$(BINDIR)/programa: $(SRCDIR)/main.cpp $(INCDIR)/hashtable.hpp
 	mkdir -p $(BINDIR)
 	$(CC) $(CFLAGS) $^ -o $@
 
